fix: score board align-items

--- a/src/pages/WritePoetryView/SecondView/ScoreBoard/index.less
+++ b/src/pages/WritePoetryView/SecondView/ScoreBoard/index.less
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   font-size: 16px;
+  align-items: flex-end;
 
   .desc {
     display: flex;
